--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-toastify": "^8.2.0",
     "serverless-mysql": "^1.5.4"
   },
