--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
     "dotenv": "^16.0.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "serverless-mysql": "^1.5.4"
   },
