User Profile Add/Update System Implemented

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #DB CONFIG
 USERNAME = "fahim"
 PASSWORD = "fahim1160"
-DB = "bariwala_mn"
-PORT = 3406
+DB = "bariwala"
+PORT = 3306
 HOST = "localhost"
 
 #JWT SECRET
