Context API & Profile Update System Implemented

--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 USERNAME = "fahim"
 PASSWORD = "fahim1160"
 DB = "bariwala"
-PORT = 3306
+PORT = 3446
 HOST = "localhost"
 
 #JWT SECRET
 JWT_SEC = "OFFENSIVESECURITY"
+REFFRESH_SEC = "GOTOHELL"
